fixed checkout photo on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -432,7 +432,7 @@ input {
 
   .thankyou-photo {
     width: 100%;
-    max-height: 26vh;
+    max-height: 25vh;
   }
 }
 
